* `sjt.lm`, `sjt.lmer`, `sjt.glm` and `sjt.glmer` get a `showDeviance` argument to display model's deviance in the table summary.
* `sjt.lmer` and `sjt.glmer` now show R2-values (based on sjmisc::r2 function).
* `sjt.lmer` and `sjt.glmer` get argument `showREvar` to show random effect variances.
* `sjt.df` gets a `...` argument to pass down other arguments to `psych::describe`.
* Plot-type of `sjp.int` now defaults to `type = "eff"`.
* Minor improvements to `sjp.int` according to plot labels (legend, axis).

Bug fixes:
* `sjt.xtab` did not apply `highlightTotal` to total column.
* `sjt.xtab` showed wrong total percentages for row and column percentages.
* `geom.outline.color` and `geom.outline.size` did not apply to bar geoms after ggplot-update.


Version 1.9.2
-----------------------------------------------------------------------------
General:
* Updates package vignettes (http://strengejacke.de/sjPlot/) to work with the latest package versions.

Changes to functions:
* `sjp.lmm` and `sjp.glmm` now also support linear mixed effects models (of class `merMod`).
* `sjp.int` now uses proper x-axis-tick-labels for `type = "eff"`, when predictor on x-axis is a factor with non-numeric factor-levels (or has label attributes).
* `sjp.glm` gets a `group.estimates` argument to group estimates in forest plots and colour them according to group assignment. Use arguments `show.legend` and `legendTitle` to modify group legend.
* `sjp.poly` now has better variable label detection for automatic axis labelling.
* `sjp.lmer` and `sjp.glmer` now support model diagnostics with `type = "ma"`.
* Better support for different model families in `sjp.glm`.
* Better axis labelling for `type = "poly"` in `sjp.lm` and `sjp.lmer`.

Bug fixes:
* Fixed bug in `sjp.int`, where automatic y-axis-scaling for binary outcomes cut off parts of confidence region in some cases.
* Fixed bug in `sjp.lmer` and `sjp.glmer` with doubled y-axis for faceted random effect plots.